iptables-scripts/iptables.new.rules
# Generated by iptables-save v1.4.14 on Sat Apr  2 14:22:15 2016
# Updated or reset on 08.23.2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 10.9.8.0/24 -o eth0 -j LOG --log-prefix "[iptables VPN] " --log-level 2
-A POSTROUTING -s 10.9.8.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Apr  2 14:22:15 2016
# Generated by iptables-save v1.4.14 on Sat Apr  2 14:22:15 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:IN_SSH - [0:0]
:TCP - [0:0]
:UDP - [0:0]
:logdrop - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j logdrop
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j IN_SSH
#-A INPUT -p tcp -m tcp --dport 65530 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 8109 -j LOG --log-prefix "[SS-in] "
#-A INPUT -p tcp -m tcp --dport 8109 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -j UDP
-A INPUT -p tcp -j TCP
-A INPUT -j logdrop
-A FORWARD -i eth0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.9.8.0/24 -o eth0 -j ACCEPT
#-A OUTPUT -p tcp -m owner --uid-owner 1000 -m tcp --dport 80 -j LOG --log-prefix "[SS-out]"
#-A OUTPUT -p tcp -m owner --uid-owner 1000 -m tcp --dport 443 -j LOG --log-prefix "[SS-out]"
#-A IN_SSH -s 221.194.57.246/32 -p tcp -j REJECT --reject-with icmp-port-unreachable
-A IN_SSH -s 223.73.1.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A IN_SSH -m recent --rcheck --seconds 10 --hitcount 3 --rttl --name sshbf --rsource -j logdrop
-A IN_SSH -m recent --rcheck --seconds 1800 --hitcount 4 --rttl --name sshbf --rsource -j logdrop
-A IN_SSH -m recent --set --name sshbf --rsource -j ACCEPT
-A TCP -p tcp -j REJECT --reject-with tcp-reset
-A UDP -p udp -j REJECT --reject-with icmp-port-unreachable
-A logdrop -m limit --limit 5/min --limit-burst 1 -j LOG --log-prefix "[iptables BLOCKED] "
-A logdrop -j DROP
COMMIT
# Completed on 08.23. 2016
