iptables-scripts/iptables.whonix-my.rules
# Generated by iptables-save v1.4.21 on Wed Jul 13 07:50:00 2016
*filter
:INPUT DROP [235:9400]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [124:6448]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 1080 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 12345 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 8963 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 12345 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 1080 -j ACCEPT
COMMIT
# Completed on Wed Jul 13 07:50:00 2016
# Generated by iptables-save v1.4.21 on Wed Jul 13 07:50:00 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [453:23556]
:POSTROUTING ACCEPT [271:14092]
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 12345
-A OUTPUT -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 12345
COMMIT
# Completed on Wed Jul 13 07:50:00 2016
